--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Facto",
   "license": "MIT",
   "dependencies": {
+    "cli-table": "^0.3.1",
     "discord.js": "^11.4.2",
     "rethinkdbdash": "^2.3.31"
   }
