--- a/config-example.json
+++ b/config-example.json
@@ -5,5 +5,11 @@
     "featurechannel":"",
     "discordchannel":"",
     "eventchannel":"",
-    "prefix":""
+    "prefix":"",
+    "db": {
+        "host":"",
+        "port":"",
+        "user":"",
+        "password":""
+    }
 }
